Check `@return` type docs on `define_shared_constant`/`define_shared_variable` definitions (#592)